[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Spirit.gd" type="Script" id=1]
[ext_resource path="res://textures/spirits3x.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Legs",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Tails",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 1.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 164.012

[sub_resource type="CapsuleShape2D" id=12]
radius = 15.0

[node name="Spirit" type="Area2D" groups=["spirits"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Tails"

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Aura" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aura"]
shape = SubResource( 2 )

[node name="Run" type="Timer" parent="."]

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body"]
shape = SubResource( 12 )

[node name="Readiness" type="Timer" parent="."]
wait_time = 30.0

[connection signal="body_entered" from="Aura" to="." method="_on_Aura_Area2D_body_entered"]
[connection signal="timeout" from="Run" to="." method="_on_Run_timeout"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="timeout" from="Readiness" to="." method="_on_Readiness_timeout"]
